scripts/nullaway/annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:18: error: [NullAway] initializer method does not guarantee @NonNull field numLeft (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CombinationGenerator(int n, int r) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:232: error: [NullAway] dereferenced expression sigma is @Nullable
		for (Iterator<?> i = sigma.iterator(); i.hasNext();) {
		                          ^
    (see http://t.uber.com/nullaway )
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:56: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 52), world (line 54) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DefaultReasoner() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:90: error: [NullAway] initializer method does not guarantee @NonNull fields rules (line 52), world (line 54) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DefaultReasoner(WorldSet myWorld, RuleSet myRules) {
	       ^
    (see http://t.uber.com/nullaway )
4 errors
